--- a/topic_list/problem_template.html
+++ b/topic_list/problem_template.html
@@ -35,13 +35,24 @@
         <div class="problem" id="problem1">
             <h2 class="questionTitle">Question 1</h2>
             <div class="problemContent">
-                <p>Here is an example question, or is it not?</p>        
+                <p></p>
+                <ol>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ol>        
             </div>
             <div class="showAnswer" onclick="showAns1()">
-                Answer
+                答え
             </div>
             <div class="answer answer1">
-                The answer to the question.
+                <p></p>
+                <ul style="list-style:none">
+                    <li></li>
+                    <li></li>
+                </ul>
             </div>
         </div>
 
