--- a/topic_list/undougaku_problems.html
+++ b/topic_list/undougaku_problems.html
@@ -15,16 +15,16 @@
         <h2 class="pageNavigationTitle">Find Question by Number</h2>
         <ul class="pageNavigation">
             <li><a href="#problem1">1</a></li>
-            <li><a href="">2</a></li>
-            <li><a href="">3</a></li>
-            <li><a href="">4</a></li>
-            <li><a href="">5</a></li>
-            <li><a href="">6</a></li>
-            <li><a href="">7</a></li>
-            <li><a href="">8</a></li>
-            <li><a href="">9</a></li>
-            <li><a href="">10</a></li>
-            <li><a href="">11</a></li>
+            <li><a href="#problem2">2</a></li>
+            <li><a href="#problem3">3</a></li>
+            <li><a href="#problem4">4</a></li>
+            <li><a href="#problem5">5</a></li>
+            <li><a href="#problem6">6</a></li>
+            <li><a href=#problem7>7</a></li>
+            <li><a href="#problem8">8</a></li>
+            <li><a href="#problem9">9</a></li>
+            <li><a href="#problem10">10</a></li>
+            <li><a href="#problem11">11</a></li>
             <li><a href="">12</a></li>
             <li><a href="">13</a></li>
             <li><a href="">14</a></li>
