--- a/topic_list/undougaku_problems.html
+++ b/topic_list/undougaku_problems.html
@@ -12,26 +12,27 @@
     
     <main>
         <h1 class="pageTitle">運動学問題</h1>
-        <h2 class="pageNavigationTitle">Find Question by Number</h2>
-        <ul class="pageNavigation">
-            <li><a href="#problem1">1</a></li>
-            <li><a href="#problem2">2</a></li>
-            <li><a href="#problem3">3</a></li>
-            <li><a href="#problem4">4</a></li>
-            <li><a href="#problem5">5</a></li>
-            <li><a href="#problem6">6</a></li>
-            <li><a href=#problem7>7</a></li>
-            <li><a href="#problem8">8</a></li>
-            <li><a href="#problem9">9</a></li>
-            <li><a href="#problem10">10</a></li>
-            <li><a href="#problem11">11</a></li>
-            <li><a href="">12</a></li>
-            <li><a href="">13</a></li>
-            <li><a href="">14</a></li>
-            <li><a href="">15</a></li>
-            <li><a href="">16</a></li>
-        </ul>
-
+        <div class="pageNavigation">
+            <h2 class="pageNavigationTitle">Find Question by Number</h2>
+            <ul class="navigation">
+                <li><a href="#problem1">1</a></li>
+                <li><a href="#problem2">2</a></li>
+                <li><a href="#problem3">3</a></li>
+                <li><a href="#problem4">4</a></li>
+                <li><a href="#problem5">5</a></li>
+                <li><a href="#problem6">6</a></li>
+                <li><a href=#problem7>7</a></li>
+                <li><a href="#problem8">8</a></li>
+                <li><a href="#problem9">9</a></li>
+                <li><a href="#problem10">10</a></li>
+                <li><a href="#problem11">11</a></li>
+                <li><a href="">12</a></li>
+                <li><a href="">13</a></li>
+                <li><a href="">14</a></li>
+                <li><a href="">15</a></li>
+                <li><a href="">16</a></li>
+            </ul>
+        </div>
         <div class="problem" id="problem1">
             <h2 class="questionTitle">Question 1</h2>
             <div class="problemContent">
@@ -277,7 +278,7 @@
         </div>
 
         
-        <div class="problem" id="problem1">
+        <!-- <div class="problem" id="problem1">
             <h2 class="questionTitle">Question 1</h2>
             <div class="problemContent">
                 <p></p>
@@ -524,7 +525,7 @@
                     <li></li>
                 </ul>
             </div>
-        </div>
+        </div> -->
     </main>
 
     <footer>
