--- a/topic_list/undougaku_problems.html
+++ b/topic_list/undougaku_problems.html
@@ -36,7 +36,7 @@
         <div class="problem" id="problem1">
             <h2 class="questionTitle">Question 1</h2>
             <div class="problemContent">
-                <p>1. 口裂を閉鎖するのはどれか。2 つ選べ。</p>
+                <p>口裂を閉鎖するのはどれか。2 つ選べ。</p>
                  <ol>
                      <li>頬筋</li>
                      <li>広頸筋</li>
